syntax = "proto3";

option go_package = "github.com/aalsa16/golang-microservices/proto";

message SignUpRequest {
    string email = 1;
    string password = 2;
}

message User {
    int64 id = 1;
    string email = 2;
    string uuid = 3;
}

message SignInRequest {
    string email = 1;
    string password = 2;
}

message SignInResponse {
    User user = 1;
    string access_token = 2;
    string refresh_token = 3;
}

message RefreshTokenRequest {
    string refresh_token = 1;
}

message RefreshTokenResponse {
    string access_token = 1;
}

service AuthenticationService {
    rpc SignUp(SignUpRequest) returns (User);
    rpc SignIn(SignInRequest) returns (SignInResponse);
    rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
}